--- a/bam/templates/manifest.yaml
+++ b/bam/templates/manifest.yaml
@@ -30,54 +30,96 @@ tags:
   # Add relevant tags for your project
 
 # ============================================================================
-# DATA - Data source and local cache configuration
+# DATASETS - Data source and local cache configuration
 # ============================================================================
-data:
-  enabled: true               # Set false if project has no external data
-  endpoint: ""                # Storage label: Local | I Drive | MSD CEPH | RFS | HDD1
-  source: ""                  # Original data path (e.g., /mnt/ceph/project/raw)
-  local: ""                   # Local cache path (e.g., /data/local/project)
-  locally_mounted: false      # True if source is directly accessible
-  description: ""             # What the data contains
-  format: ""                  # tiff | zarr | hdf5 | nd2 | czi | etc.
-  raw_size_gb: null           # Approximate raw data size
+datasets:
+  - name: ""                  # REQUIRED: Dataset identifier
+    endpoint: ""              # Storage label: Local | I Drive | MSD CEPH | RFS | HDD1
+    source: ""                # Original data path (e.g., /mnt/ceph/project/raw)
+    local: ""                 # Local cache path (e.g., /data/local/project)
+    locally_mounted: false    # True if source is directly accessible
+    description: ""           # What the data contains
+    format: ""                # tiff | zarr | hdf5 | nd2 | czi | etc.
+    raw_size_gb: null         # Approximate raw data size
+    raw_size_unit: gb         # gb | tb
+    compressed: null          # true | false
+    uncompressed_size_gb: null
+    uncompressed_size_unit: gb
 
 # ============================================================================
 # ACQUISITION - Imaging parameters and metadata
 # ============================================================================
 acquisition:
-  microscope: ""              # Microscope model/name
-  modality: ""                # confocal | widefield | lightsheet | EM | etc.
-  objective: ""               # e.g., "40x/1.3 Oil"
+  sessions:
+    - imaging_date: null      # YYYY-MM-DD
+      microscope: ""          # Microscope model/name
+      modality: ""            # confocal | widefield | lightsheet | EM | etc.
+      objective: ""           # e.g., "40x/1.3 Oil"
+      voxel_size:
+        x_um: null
+        y_um: null
+        z_um: null
+      time_interval_s: null   # For timelapse
+      notes: ""
+      channels:
+        - name: ""
+          fluorophore: ""
+          excitation_nm: null
+          emission_nm: null
   channels:
     - name: ""
       fluorophore: ""
       excitation_nm: null
       emission_nm: null
-  voxel_size:
-    x_um: null
-    y_um: null
-    z_um: null
-  time_interval_s: null       # For timelapse
-  notes: ""
 
 # ============================================================================
 # TOOLS - Software and analysis environment
 # ============================================================================
 tools:
-  environment: ""             # conda | pixi | venv | docker
+  git_remote: ""              # Remote URL (auto-detected from .git)
+  environment: ""             # conda | pixi | venv | uv | poetry | docker | devcontainer | renv | nix
   env_file: ""                # Path to environment.yaml or requirements.txt
   languages:
-    - python
+    - Python
     # - R
-    # - fiji-macro
-  key_packages:
-    - name: napari
-      version: ""
-    - name: cellpose
-      version: ""
-  scripts_dir: ""             # Path to analysis scripts
-  notebooks_dir: ""           # Path to Jupyter notebooks
+    # - Fiji macro
+  software:
+    - Fiji/ImageJ
+    # - napari
+    # - QuPath
+  cluster_packages:
+    - SLURM
+    # - Snakemake
+
+# =========================================================================
+# METHOD - Analysis method documentation
+# =========================================================================
+method:
+  file_path: ""               # Path to method.md (e.g., doc/method.md)
+  template_used: ""           # Template name if created from UI
+
+# =========================================================================
+# HARDWARE - Compute environment profiles
+# =========================================================================
+hardware_profiles:
+  - name: local
+    cpu: "Intel i9"
+    cores: "16"
+    ram: "64 GB"
+    gpu: "1x RTX 4090"
+    notes: ""
+    is_cluster: false
+    partition: ""
+    node_type: ""
+  - name: cluster-gpu
+    cpu: "AMD EPYC"
+    cores: "64"
+    ram: "512 GB"
+    gpu: "4x A100"
+    notes: "Shared GPU queue"
+    is_cluster: true
+    partition: "gpu"
+    node_type: "a100"
 
 # ============================================================================
 # BILLING - Project funding and time tracking
@@ -239,16 +281,18 @@ timeline:
     - name: "Data acquisition complete"
       target_date: null
       actual_date: null
-      status: pending         # pending | in-progress | completed | delayed
+      status: pending         # pending | in-progress | completed | delayed | cancelled
+      notes: ""
     - name: "Analysis complete"
       target_date: null
       actual_date: null
       status: pending
+      notes: ""
     - name: "Manuscript draft"
       target_date: null
       actual_date: null
       status: pending
-  notes: ""
+      notes: ""
 
 # ============================================================================
 # ARTIFACTS - Deliverables and outputs
