--- a/bam/tui/pyproject.toml
+++ b/bam/tui/pyproject.toml
@@ -5,6 +5,8 @@ description = "BAM - Bioimage Analysis Manager TUI"
 requires-python = ">=3.11"
 dependencies = [
     "textual>=0.40",
+    "pendulum>=3.0",
+    "textual-datepicker>=0.1.0",
     "pydantic>=2.0",
     "pyyaml>=6.0",
 ]
