--- a/bam/tui/ba_tui/config_defaults.yaml
+++ b/bam/tui/ba_tui/config_defaults.yaml
@@ -41,8 +41,8 @@ data_formats:
 # Collaborator Roles
 collaborator_roles:
   - PI
+  - Postdoc
   - Students
-  - Others
 
 # Status Options
 project_status:
